--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -146,7 +146,7 @@
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-quiz.png" alt="">
                             </i>
-                            <p>My Quizes </p>
+                            <p>My Quizzes </p>
                         </a>
                     </li>
 
@@ -400,7 +400,7 @@
                                         <h1 id="PageHeader" class="float-left"></h1>
 
                                     </div>
-                                    <div class="col-sm-12 col-md-9 col-lg-9">
+                                    <div class="col-sm-12 col-md-9 col-lg-9 hidden">
                                         <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn" id="global_Createbtn">Create</button>
                                         <input type="text" placeholder="Type Keyword" id="global_filter" class="searchBox pull-right pl-4 p-2 pull-right rounded rounded-lg   mr-3">
                                     </div>
