--- a/SEA_Application/Views/Student_Dashboard/Quizes.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/Quizes.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Quizes";
+    ViewBag.Title = "Quizzes";
     Layout = "~/Views/Shared/_StudentDashboardLayout.cshtml";
 }
 
@@ -76,10 +76,10 @@
 
 
     
-             $("#PageHeader").html("Quizes");
+             $("#PageHeader").html("Quizzes");
 
                 $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-                $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Quizes</a></li>');
+                $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Quizzes</a></li>');
 
 
 
