Creation Buttons Removal

--- a/SEA_Application/Views/Student_Dashboard/_Student_Attendance.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/_Student_Attendance.cshtml
@@ -9,16 +9,16 @@
                 table = $('#datatable').dataTable({
                     buttons: [
                         {
-                            text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
+                            text: ''
                         },
                         {
-                            text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
+                            text: '',
                             //action: function (e, dt, button, config) {
                             //    window.location.href = '';
                             //}
                         },
                         {
-                            text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
+                            text: ''
                         }
                     ],
                     "language": {
