--- a/SEA_Application/Views/Shared/_LayoutPage_Login.cshtml
+++ b/SEA_Application/Views/Shared/_LayoutPage_Login.cshtml
@@ -100,7 +100,10 @@ License: You must have a valid license purchased only from themeforest(the above
 
 
     <script src="~/Scripts/util.js"></script>
-
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="~/Content/assets/assets/img/orignal.png">
+    <link rel="icon" type="image/png" href="~/Content/assets/assets/img/orignal.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
