--- a/SEA_Application/Views/StudentCourses/StudentLessons.cshtml
+++ b/SEA_Application/Views/StudentCourses/StudentLessons.cshtml
@@ -13,7 +13,7 @@
 <script>
     $(document).ready(function () {
 
-        $("#PageHeader").html("Subject Topics");
+        $("#PageHeader").html("Lessons");
 
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li> <a href="/StudentCourses/Index"> Courses </a> <span>&gt;</span></li>');
@@ -192,7 +192,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="qa-tab-attr" data-toggle="tab" href="#qa-attr" role="tab" aria-controls="qa-attr"
-                                       aria-selected="false">Q/A</a>
+                                       aria-selected="false">Discussion Forum</a>
                                 </li>
                                 <!--<li class="nav-item">
                                     <a class="nav-link" id="settings-tab-attr" data-toggle="tab" href="#settings-attr" role="tab" aria-controls="settings-attr"
