--- a/SEA_Application/Views/StudentCourses/SubjectTopics.cshtml
+++ b/SEA_Application/Views/StudentCourses/SubjectTopics.cshtml
@@ -13,11 +13,11 @@
 <script>
     $(document).ready(function () {
 
-        $("#PageHeader").html("Subject Topics");
+        $("#PageHeader").html("Topics");
 
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li> <a href="/StudentCourses/Index"> Courses </a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lessons</a></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Topics</a></li>');
 
         var sub = $("#SubjectId").val();
         $("#GenericDiv").show();
